# chuk-mcp-celestial

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  ROADMAP.md  SPEC.md  celestial.yaml.example  fly.toml  pyproject.toml
examples/: 01_navy_api_provider.py  02_skyfield_provider.py  03_hybrid_provider.py  04_provider_comparison.py
scripts/: download_ephemeris.py
src/chuk_mcp_celestial/: config.py  models.py  server.py
src/chuk_mcp_celestial/core/: celestial_storage.py
src/chuk_mcp_celestial/providers/: __init__.py  base.py  factory.py  navy.py  skyfield_provider.py
tests/: test_base.py  test_config.py  test_factory.py  test_provider_comparison.py  test_server.py  test_sky.py  test_skyfield_vfs.py
